[package]
name = "multipart-async"

version = "0.0.2"

authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "A backend-agnostic extension for asynchronous HTTP libraries that provides support for POST multipart/form-data requests on for both client and server."

keywords = ["form-data", "hyper", "async", "http", "upload"]

repository = "http://github.com/abonander/multipart-async"

license = "MIT OR Apache-2.0"

[dependencies]
bytes = "0.4"
display_bytes = "0.2"
futures = "0.1"
http = "0.1.0"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0-alpha.4"
rand = "0.5"

hyper = { version = "0.12", optional = true }
httparse = { version = "1.0", optional = true }
twoway = { version = "0.1", optional = true }

# for saving fields to disk
tokio-fs = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
tokio-threadpool = { version = "0.1", optional = true }

[dev-dependencies]
env_logger = "0.5"

[features]
client = []
default = ["server", "client"]
server = ["twoway", "httparse"]
save = ["tokio-fs", "tokio-io", "tokio-threadpool"]
sse4 = ["twoway/pcmp"]

[[bin]]
name = "form_test"
path = "bin/form_test.rs"
required-features = ["hyper", "server"]
